--- a/src/main/resources/static/resources/css/style.css
+++ b/src/main/resources/static/resources/css/style.css
@@ -22,3 +22,28 @@ blockquote {
 form#form {
 	padding: 0 1.25em;
 }
+.card-reaction{
+	margin: 10px 20px;
+	cursor: pointer;
+}
+.like-clicked{
+	display: none;
+}
+.card-reaction button{
+	border:none;
+}
+.like-button{
+	float: left;
+	padding: 0 10px;
+}
+.email{
+	background-color: rgba(55,55,55,0.2);
+}
+.like-button button{
+	background: none;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
